--- a/package.json
+++ b/package.json
@@ -7,11 +7,28 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "SR": "cd android && ./gradlew signingReport",
+    "AR": "cd android && ./gradlew assembleRelease",
+    "BR": "cd android && ./gradlew bundleRelease"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
+    "axios": "^1.8.4",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
-    "react-native": "0.79.0"
+    "react-native": "0.79.0",
+    "react-native-biometrics": "^3.0.1",
+    "react-native-elements": "^3.4.3",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-permissions": "^5.4.0",
+    "react-native-reanimated": "^3.17.5",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.10.0",
+    "react-native-vector-icons": "^10.2.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
